Basic transforms of PDF page/text space to canvas space

--- a/test.html
+++ b/test.html
@@ -26,12 +26,10 @@ function displayPage(number) {
     pageDisplay.value = number;
 
     var ctx = canvas.getContext("2d");
-    ctx.save();
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    var gfx = new CanvasGraphics(ctx, 96.0, 96.0, null);
+    var gfx = new CanvasGraphics(ctx);
     var interp = new Interpreter(null, page.res, null, gfx);
     interp.interpretHelper(new MockParser(page.objs));
-    ctx.restore();
 }
 
 function nextPage() {
