Lower the common denominator

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Simple pdf.js page viewer</title>
-  <script type="application/javascript;version=1.8"
+  <script type="text/javascript"
           src="pdf.js"></script>
   <style type"text/css">
 body {
@@ -20,7 +20,7 @@ body {
 }
   </style>
 
-  <script type="application/javascript;version=1.8">
+  <script type="text/javascript">
 var canvas, numPages, pageDisplay, pageNum;
 function load() {
     canvas = document.getElementById("canvas");
