--- a/test.html
+++ b/test.html
@@ -29,15 +29,18 @@ function load() {
 
     req = new XMLHttpRequest();
     req.open("GET", "uncompressed.tracemonkey-pldi-09.pdf");
-    req.mozResponseType = "arraybuffer";
-    req.expected = 0; // 200 for HTTP
+    req.mozResponseType = req.responseType = "arraybuffer";
+    req.expected = (document.URL.indexOf("file:") == 0) ? 0 : 200;
     req.onreadystatechange = xhrstate;
     req.send(null);
 }
 
 function xhrstate() {
     if (req.readyState == 4 && req.status == req.expected) {
-        var data = req.mozResponseArrayBuffer || req.mozResponse;
+        var data = req.mozResponseArrayBuffer ||
+                   req.mozResponse ||
+                   req.responseArrayBuffer ||
+                   req.response;
         pdf = new PDFDoc(new Stream(data));
         numPages = pdf.numPages;
         displayPage(1);
