Add a the beggining of a Type1 font reader

--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
 
         <script type="text/javascript" src="pdf.js"></script>
         <script type="text/javascript" src="test.js"></script>
+        <script type="text/javascript" src="PDFFont.js"></script>
   </head>
 
   <body onload="load();">
