Font and XObject entries can be refs, and dump image magic bytes

--- a/test.html
+++ b/test.html
@@ -41,6 +41,7 @@ function load() {
     pageDisplay = document.getElementById("pageNumber");
     infoDisplay = document.getElementById("info");
     open("uncompressed.tracemonkey-pldi-09.pdf");
+//    open("uncompressed.report.pdf");
 }
 
 function open(url) {
