fix deflate code

--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@ function load() {
     canvas.mozOpaque = true;
     pageDisplay = document.getElementById("pageNumber");
     infoDisplay = document.getElementById("info");
-    open("uncompressed.tracemonkey-pldi-09.pdf");
+    open("compressed.tracemonkey-pldi-09.pdf");
 }
 
 function open(url) {
