--- a/test.html
+++ b/test.html
@@ -34,12 +34,24 @@ span#info {
   </style>
 
 <script type="text/javascript">
+function queryParams() {
+    var qs = window.location.search.substring(1);
+    var kvs = qs.split("&");
+    var params = { };
+    for (var i = 0; i < kvs.length; ++i) {
+        var kv = kvs[i].split("=");
+        params[unescape(kv[0])] = unescape(kv[1]);
+    }
+    return params;
+}
+
 var canvas, numPages, pageDisplay, pageNum;
 function load() {
     canvas = document.getElementById("canvas");
     canvas.mozOpaque = true;
     pageDisplay = document.getElementById("pageNumber");
     infoDisplay = document.getElementById("info");
+    pageNum = parseInt(queryParams().page) || 1;
     open("compressed.tracemonkey-pldi-09.pdf");
 }
 
@@ -61,7 +73,8 @@ function xhrstate() {
                    req.response;
         pdf = new PDFDoc(new Stream(data));
         numPages = pdf.numPages;
-        displayPage(1);
+        document.getElementById("numPages").innerHTML = numPages.toString();
+        gotoPage(pageNum);
     }
 }
 
@@ -113,6 +126,7 @@ function gotoPage(num) {
     <button onclick="nextPage();">Next</button>
     <input type="text" id="pageNumber" onchange="gotoPage(this.value);"
            value="1" size="4"></input>
+    / <span id="numPages">--</span>
     <span id="info"></span>
   </div>
   <div id="viewer">
