Add the beginning of a Type1 to Type2 charstring converter

--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="pdf.js"></script>
         <script type="text/javascript" src="test.js"></script>
         <script type="text/javascript" src="cffStandardStrings.js"></script>
+        <script type="text/javascript" src="t2data.js"></script>
         <script type="text/javascript" src="PDFFont.js"></script>
   </head>
 
