implement TL and T*

--- a/test.html
+++ b/test.html
@@ -52,7 +52,8 @@ function load() {
     pageDisplay = document.getElementById("pageNumber");
     infoDisplay = document.getElementById("info");
     pageNum = parseInt(queryParams().page) || 1;
-    open("compressed.tracemonkey-pldi-09.pdf");
+//    open("compressed.tracemonkey-pldi-09.pdf");
+    open("compressed.canvas.pdf");
 }
 
 function open(url) {
