--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="test.js"></script>
         <script type="text/javascript" src="cffStandardStrings.js"></script>
         <script type="text/javascript" src="glyphlist.js"></script>
+        <script type="text/javascript" src="Encodings.js"></script>
         <script type="text/javascript" src="PDFFont.js"></script>
   </head>
 
