--- a/test.html
+++ b/test.html
@@ -1,15 +1,14 @@
 <html>
-<<<<<<< HEAD
     <head>
         <title>Simple pdf.js page viewer</title>
         <link rel="stylesheet" href="test.css"></link>
 
-        <script type="text/javascript" src="pdf.js"></script>
         <script type="text/javascript" src="test.js"></script>
+        <script type="text/javascript" src="pdf.js"></script>
+        <script type="text/javascript" src="fonts.js"></script>
         <script type="text/javascript" src="cffStandardStrings.js"></script>
-        <script type="text/javascript" src="glyphlist.js"></script>
         <script type="text/javascript" src="Encodings.js"></script>
-        <script type="text/javascript" src="PDFFont.js"></script>
+        <script type="text/javascript" src="glyphlist.js"></script>
   </head>
 
   <body onload="load();">
