--- a/test.html
+++ b/test.html
@@ -26,8 +26,9 @@
 
     <div id="viewer">
       <!-- Canvas dimensions must be specified in CSS pixels.  CSS pixels
-           are always 96 dpi.  These dimensions are 8.5x11in at 96dpi. -->
-      <canvas id="canvas" width="816" height="1056"></canvas>
+           are always 96 dpi.  816x1056 is 8.5x11in at 96dpi. -->
+      <!-- We're rendering here at 1.5x scale. -->
+      <canvas id="canvas" width="1224" height="1584"></canvas>
     </div>
   </body>
 </html>
