--- a/viewer.html
+++ b/viewer.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>Simple pdf.js page viewer</title>
-        <link rel="stylesheet" href="test.css"></link>
+        <link rel="stylesheet" href="viewer.css"></link>
 
-        <script type="text/javascript" src="test.js"></script>
+        <script type="text/javascript" src="viewer.js"></script>
         <script type="text/javascript" src="pdf.js"></script>
         <script type="text/javascript" src="fonts.js"></script>
         <script type="text/javascript" src="glyphlist.js"></script>
