--- a/multi-page-viewer.html
+++ b/multi-page-viewer.html
@@ -10,11 +10,20 @@
 </head>
 <body>
     <div id="controls">
-        <button id="previousPageButton">Previous</button>
-        <button id="nextPageButton">Next</button>
-        <input type="text" id="pageNumber" value="1" size="2"/>
-        <span>/</span>
-        <span id="numPages">--</span>
+        <span class="control">
+            <button id="previousPageButton">Previous</button>
+            <button id="nextPageButton">Next</button>
+        </span>
+        <span class="control">
+            <input type="text" id="pageNumber" value="1" size="2"/>
+            <span>/</span>
+            <span id="numPages">--</span>
+        </span>
+        <span class="control">
+            <span>Zoom</span>
+            <input type="text" id="scale" value="100" size="2"/>
+            <span>%</span>
+        </span>
     </div>
     <div id="viewer"></div>
 </body>
