--- a/test_slave.html
+++ b/test_slave.html
@@ -5,9 +5,24 @@
   <script type="text/javascript" src="fonts.js"></script>
   <script type="text/javascript" src="glyphlist.js"></script>
   <script type="application/javascript">
-var canvas, currentTask, currentTaskIdx, failure, manifest, pdfDoc, stdout;
+var browser, canvas, currentTask, currentTaskIdx, failure, manifest, pdfDoc, stdout;
+
+function queryParams() {
+    var qs = window.location.search.substring(1);
+    var kvs = qs.split("&");
+    var params = { };
+    for (var i = 0; i < kvs.length; ++i) {
+        var kv = kvs[i].split("=");
+        params[unescape(kv[0])] = unescape(kv[1]);
+    }
+    return params;
+}
 
 function load() {
+  var params = queryParams();
+  browser = params.browser;
+  manifestFile = params.manifestFile;
+
   canvas = document.createElement("canvas");
   // 8.5x11in @ 100% ... XXX need something better here
   canvas.width = 816;
@@ -15,10 +30,11 @@ function load() {
   canvas.mozOpaque = true;
   stdout = document.getElementById("stdout");
 
+  log("Harness thinks this browser is '"+ browser +"'\n");
   log("Fetching manifest ...");
 
   var r = new XMLHttpRequest();
-  r.open("GET", "test_manifest.json", false);
+  r.open("GET", manifestFile, false);
   r.onreadystatechange = function(e) {
     if (r.readyState == 4) {
       log("done\n");
@@ -111,7 +127,8 @@ function done() {
 }
 
 function sendTaskResult(snapshot) {
-  var result = { id: currentTask.id,
+  var result = { browser: browser,
+                 id: currentTask.id,
                  taskDone: currentTask.taskDone,
                  failure: failure,
                  file: currentTask.file,
